# CopyPasta

./: .gitignore  ISSUE_TEMPLATE.md  LICENSE  README.md  gui.py  main.py  pyproject.toml
src/: main.py
