[project]
name = "CopyPasta"
version = "0.2.0"
description = "Quick Appraisal with Janice for Eve Online"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MurkyOwl", email = "none@none.com" }
]
dependencies = [
  "flet==0.27.6",
  "keyboard==0.11.0",
  "pyperclip==1.9.0",
  "requests==2.32.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "CopyPasta"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}